--- a/vuefrontend/public/index.html
+++ b/vuefrontend/public/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="../static/images/logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="main.css">
     <title>My Blog System</title>
   </head>
-  <body>
+  <body style="background-color: #3f3f3f; color: seashell; margin: 0;">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
